--- a/src/components/posts/comments/comments-modal/CommentsModal.scss
+++ b/src/components/posts/comments/comments-modal/CommentsModal.scss
@@ -69,3 +69,9 @@
     }
   }
 }
+
+@media (max-width: 850px) and (min-aspect-ratio: 13/9) {
+  .modal-comments-container {
+    max-height: 370px;
+  }
+}
