--- a/src/components/posts/post-modal/post-add/AddPost.scss
+++ b/src/components/posts/post-modal/post-add/AddPost.scss
@@ -3,7 +3,8 @@
   align-self: center;
   justify-self: center;
   position: absolute;
-  width: 500px;
+  max-width: 500px;
+  min-width: 360px;
   overflow: hidden;
   box-sizing: border-box;
   z-index: 1;
@@ -240,10 +241,11 @@ hr {
 .modal-box-image-form {
   height: 400px;
   overflow-y: scroll;
-  display: grid;
+  display: block;
+  /* display: grid;
   grid-template-areas:
     "input"
-    "image";
+    "image"; */
 
   .post-input {
     grid-area: input;
@@ -356,7 +358,7 @@ hr {
   align-self: center;
   justify-self: center;
   position: absolute;
-  width: 500px;
+  max-width: 500px;
   overflow: hidden;
   box-sizing: border-box;
   z-index: 1;
@@ -404,3 +406,34 @@ hr {
   background: transparent;
 }
 
+@media (width < 550px) {
+  .modal-box {
+    margin-left: 10px;
+    margin-right: 10px;
+    height: fit-content;
+    min-height: 450px;
+  }
+  .modal-box-form {
+    height: fit-content;
+    max-height: 200px;
+  }
+  .modal-box-header {
+    height: 25px;
+    white-space: nowrap;
+  }
+  .modal-giphy {
+    min-width: 370px;
+    min-height: auto;
+    }
+    .modal-giphy-header {
+      white-space: nowrap;
+    }
+    .modal-box-image-form {
+      height: 300px;
+      overflow-wrap: break-word;
+      max-width: 370px;
+      //min-width: 370px;
+      display: block;
+      margin: auto;
+    }
+}
