--- a/src/pages/social/streams/Streams.scss
+++ b/src/pages/social/streams/Streams.scss
@@ -12,14 +12,13 @@
     column-gap: 20px;
     margin-top: 20px;
     overflow-x: hidden;
-    overflow-y: scroll;
 
     .streams-post {
       grid-area: post;
-      overflow-y: scroll;
       overflow-x: hidden;
       height: 100vh;
       scroll-behavior: smooth;
+      min-width: 360px;
     }
 
     .streams-suggestions {
@@ -27,6 +26,16 @@
       background-color: var(--white-1);
       max-height: 600px;
       border-radius: 16px;
+      margin-right: 20px;
     }
+  }
+}
+
+@media (width < 1100px) {
+  .streams-suggestions {
+    display: none;
+  }
+  .streams-content {
+    grid-template-columns: 1fr;
   }
 }
