--- a/src/components/posts/comments/comments-modal/CommentsModal.scss
+++ b/src/components/posts/comments/comments-modal/CommentsModal.scss
@@ -73,5 +73,6 @@
 @media (max-width: 850px) and (min-aspect-ratio: 13/9) {
   .modal-comments-container {
     max-height: 370px;
+    padding-bottom: 50px;
   }
 }
