--- a/src/components/posts/modal-wrappers/reaction-wrapper/ReactionWrapper.scss
+++ b/src/components/posts/modal-wrappers/reaction-wrapper/ReactionWrapper.scss
@@ -74,11 +74,25 @@
   }
 }
 
-@media (max-width: 850px) and (min-aspect-ratio: 13/9) {
-  .modal-wrapper-container-body {
+@media (width < 850px) and (min-aspect-ratio: 13/9) {
+  .modal-wrapper-container {
+    min-height: 370px;
     height: 370px;
   }
-  .modal-wrapper-container-header {
-    margin-top: 100px;
+  .modal-wrapper-container-body {
+    height: 370px;
+    padding-bottom: 20px;
   }
+  .modal-wrapper-container-header {
+    margin-top: 5px;
+    padding-top: 10px;
+    align-items: center;
+
+    button {
+      display:flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+
 }
