--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -223,4 +223,11 @@ ul .dropdown-ul {
   }
 }
 
-
+@media (width < 850px) {
+  .header-nav-wrapper {
+    height: 55px;
+  }
+  .header-nav-wrapper .header-navbar {
+    height: 55px;
+  }
+}
