--- a/src/components/image-modal/ImageModal.scss
+++ b/src/components/image-modal/ImageModal.scss
@@ -66,6 +66,30 @@
         height: 700px;
         object-fit: contain;
       }
+      @media (width < 1200px) {
+        .modal-image {
+          width: 90%;
+          height: auto;
+          object-fit: contain;
+          overflow: scroll;
+        }
+        .image-modal-box {
+          height: 370px;
+        }
+      }
+    }
+    @media (width < 1200px) {
+      .modal-image {
+        width: 90%;
+        height: auto;
+        object-fit: contain;
+        overflow: scroll;
+      }
+      .image-modal-box {
+        height: 370px;
+      }
     }
   }
 }
+
+
