--- a/src/pages/auth/auth-tabs/AuthTabs.scss
+++ b/src/pages/auth/auth-tabs/AuthTabs.scss
@@ -91,4 +91,18 @@
   }
 }
 
-
+@media (width < 850px) {
+  .container-wrapper-auth .tabs {
+    width: 350px;
+    height: 380px;
+    margin: 0px auto;
+  }
+}
+@media (max-width: 850px) and (min-aspect-ratio: 13/9) {
+  .container-wrapper-auth .tabs .tab-item {
+    padding: 0px;
+  }
+  .container-wrapper-auth {
+    height: 350px;
+  }
+}
