--- a/src/components/change-password/ChangePassword.scss
+++ b/src/components/change-password/ChangePassword.scss
@@ -4,6 +4,7 @@
   padding: 15px;
   border-radius: 16px;
   margin-bottom: 100px;
+  max-width: 500px;
 
   .eye-icon {
     vertical-align: middle;
