--- a/src/components/gallery-image/GalleryImage.scss
+++ b/src/components/gallery-image/GalleryImage.scss
@@ -1,7 +1,8 @@
 .gallery-image {
   display: block;
-  width: 352px;
-  height: 352px;
+  margin: auto;
+  width: 342px;
+  height: 342px;
   position: relative;
 
   &__crop {
