--- a/src/components/image-modal/ImageModal.scss
+++ b/src/components/image-modal/ImageModal.scss
@@ -60,8 +60,10 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      overflow: scroll;
 
       .modal-image {
+        margin-top: 80px;
         width: 1200px;
         height: 700px;
         object-fit: contain;
