--- a/src/pages/social/followers/Followers.scss
+++ b/src/pages/social/followers/Followers.scss
@@ -130,23 +130,39 @@
 }
 
 .follower-card-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, 352px);
+  /* display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
   gap: 20px;
   max-width: 1152px;
   margin: auto;
   margin-bottom: 100px;
-  overflow: scroll;
+  background-color: var(--white-1);
+  padding: 24px;
+  border-radius: 16px;
+ */
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  gap: 20px 20px;
+
+  margin-top: 30px;
+  max-width: 1152px;
+  justify-items: center;
+  margin: auto;
+  margin-bottom: 100px;
   background-color: var(--white-1);
   padding: 24px;
   border-radius: 16px;
 
   &-elements {
+    overflow: hidden;
+    width: 320px;
+    height: 130px;
     background-color: var(--white-1);
     padding: 24px;
     border-radius: 16px;
     align-content: center;
     box-shadow: rgb(145 158 171 / 20%) 0 0 2px 0, rgb(145 158 171 / 12%) 0 12px 24px -4px;
+
 
     &-content {
       display: grid;
