--- a/src/pages/social/following/Following.scss
+++ b/src/pages/social/following/Following.scss
@@ -4,14 +4,15 @@
   max-width: 1152px;
   margin: auto;
   scroll-behavior: smooth;
+  width: 81vw;
 
   .card-element {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
-    gap: 20px;
+    justify-items: center;
+    gap: 20px 40px;
     margin-bottom: 100px;
     margin-top: 30px;
-    max-width: 1152px;
     margin: auto;
     background-color: var(--white-1);
     padding: 24px;
@@ -19,7 +20,7 @@
 
     &-item {
       width: 247px;
-      height: 350px;
+      height: 328px;
       background-color: var(--white-1);
       border-radius: 30px;
       overflow: hidden;
@@ -147,5 +148,11 @@
         background-color: var(--red-3);
       }
     }
+  }
+}
+
+@media (width < 850px) {
+  .card-container {
+    width: 93vw;
   }
 }
