--- a/src/components/background-header/BackgroundHeader.scss
+++ b/src/components/background-header/BackgroundHeader.scss
@@ -4,10 +4,27 @@
   margin-right: 1px;
   overflow-x: hidden;
 
+  .profile-banner-no-image{
+    overflow-y: hidden;
+    z-index: 1;
+    min-height: 430px;
+
+    h3 {
+      color: var(--white-1);
+      text-align: center;
+      position: absolute;
+      left: 50%;
+      top: 35%;
+      transform: translate(-50%, -50%);
+      font-size: 24px;
+    }
+  }
+
   .profile-banner-image {
     overflow-y: hidden;
     z-index: 1;
-    height: 430px;
+    //min-height: 430px;
+
     position: relative;
 
     .delete-btn {
@@ -21,7 +38,8 @@
       }
 
       .remove {
-        padding: 5px 10px;
+        margin-right: 15px;
+        padding: 5px 5px;
         font-weight: 800;
         border: 1px solid transparent;
         border-radius: 5px;
@@ -319,7 +337,7 @@
   }
 }
 
-@media (max-width: 550px) {
+@media (max-width: 600px) {
   .profile-banner .profile-banner-data {
     .profile-name {
       font-size: 22px;
@@ -346,11 +364,16 @@
     }
 
     .profile-banner .profile-banner-data .profile-select-image {
-    position: absolute;
-    top: -400px;
-    left: -310px;
+    position: relative;
+    top: 2vw;
+   /*  position: absolute;
+    top: -55vw;
+    left: -72vw; */
+    /* top: -215px;
+    left: -310px; */
     margin-left: 20px;
-    width: 185px;
+    width: 120px;
+    height: 30px;
       //top: -350px;
       /* .inputFile + label {
         padding: 0.5rem 25px;
