--- a/src/pages/social/followers/Followers.scss
+++ b/src/pages/social/followers/Followers.scss
@@ -1,7 +1,7 @@
 .card-element {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
-  gap: 20px;
+  gap: 20px 20px;
   margin-bottom: 100px;
   margin-top: 30px;
   max-width: 1152px;
