--- a/src/pages/social/photos/Photos.scss
+++ b/src/pages/social/photos/Photos.scss
@@ -1,6 +1,6 @@
 .photos-container {
   max-width: 1152px;
-  margin: auto;
+  margin: 0 10px;
   overflow-x: hidden;
   overflow-y: scroll;
   height: 100vh;
