--- a/src/pages/social/Social.scss
+++ b/src/pages/social/Social.scss
@@ -5,14 +5,17 @@
     flex: 2;
     min-width: 200px;
     max-width: 15%;
-    margin-right: 20px;
+   // margin-right: 20px;
   }
 
   &-content {
+    overflow: hidden;
     flex: 6;
     height: 100vh;
-    margin-left: 0px;
+    margin-left: 20px;
     margin-right: 20px;
+    //margin: auto;
+
   }
 }
 
@@ -31,9 +34,8 @@
 .dashboard-content {
   margin-left: 10px;
   margin-right: -10px;
-
+  margin: auto;
   overflow:-moz-hidden-unscrollable
-
 }
 }
 
