--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -15,20 +15,28 @@
   height: 75px;
   box-shadow: 0 0 20px 0 rgb(44 101 144 / 10%);
   padding: 0 20px;
+  padding-left: 0;
 
   .header-navbar {
     display: flex;
     justify-content: space-between;
-
     height: 75px;
     color: var(--gray-12);
     padding: 0 15px;
+    padding-left: 0;
 
     .header-image {
       display: flex;
       cursor: pointer;
       align-items: center;
-      margin-right: 45px;
+      margin-right: 20px;
+      min-width: 200px;
+      //max-width: 200px;
+      height: 100%;
+      background-image: url("../../assets/images/logo7.jpeg");
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: 210px;
 
 
       .app-name-skeleton {
@@ -40,10 +48,10 @@
         outline: 0;
       }
 
-      img {
-        max-width: 100%;
-        height: 45px;
-      }
+      /* img {
+        width: 100%;
+        height: 300px;
+      } */
 
       .app-name {
         margin-left: 10px;
