--- a/src/pages/social/streams/Streams.scss
+++ b/src/pages/social/streams/Streams.scss
@@ -2,6 +2,7 @@
   margin-top: 30px;
   max-width: 1152px;
   margin: auto;
+  margin: 30px 8px;
   height: 100vh;
 
   &-content {
@@ -9,7 +10,7 @@
     grid-template-areas: "post suggestions";
     grid-template-columns: 1fr 330px;
     grid-template-rows: 1fr;
-    column-gap: 20px;
+    margin: auto;
     margin-top: 20px;
     overflow-x: hidden;
 
@@ -26,7 +27,9 @@
       background-color: var(--white-1);
       max-height: 600px;
       border-radius: 16px;
-      margin-right: 20px;
+      margin-left: 20px;
+      margin-right: 0;
+      padding-left: 20px;
     }
   }
 }
